terraform/yaml/example-app.yaml
# Foo 애플리케이션 Pod
---
apiVersion: v1
kind: Pod
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      image: registry.k8s.io/e2e-test-images/agnhost:2.39
      command: ["/agnhost", "netexec", "--http-port", "8080"]
      ports:
        - containerPort: 8080
---
# Foo 서비스
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
# Bar 애플리케이션 Pod
apiVersion: v1
kind: Pod
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
    - name: bar-app
      image: registry.k8s.io/e2e-test-images/agnhost:2.39
      command: ["/agnhost", "netexec", "--http-port", "8080"]
      ports:
        - containerPort: 8080
---
# Bar 서비스
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
# Ingress 리소스
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /foo(/|$)(.*)
            backend:
              service:
                name: foo-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /bar(/|$)(.*)
            backend:
              service:
                name: bar-service
                port:
                  number: 8080
